---------------------------------------------------------------------------------------------------
Version: 1.0.6
  Fixes:
    - Fix module selection
    - Fix crash when production failed
    - Fix history on recipe selection
    - Fix layer management
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 04. 05. 2024.
  Changes:
    - A saved selection is automatically pinned
    - Add settings for the height of the save panel
    - An game autosave is done when a selection is saved (can be disabled in settings)
    - Right click on a machine in production panel highlights the real machines on origin surface
    - Shift left click on a machine request missing machines from logistic network
    - Add copy/paste machine preferences
  Fixes:
    - Crash when importing from a wrong machine
    - Invalid craft recipe for furnace
    - Crash on configuration change
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 03. 05. 2024.
  Fixes:
    - Fix clear of savings
    - Loading current selected saving does not override saved one
    - Save position in graph upon exit
    - Fix invalid use of black tile in nauvis
  Changes:
    - Alt-k on an assembly machine or a furnace move the graph to the corresponding recipe
    - Add pinned selections in saving panel
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 29. 04. 2024.
  Fixes:
    - Fix force change in enter/exit
    - Fix invalid solver solution
  Changes:
    - Add summary of all machines used in a production
    - Misc. improvements on layer
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 25. 04. 2024.
  Fixes:
    - Add compatibility with Blueprint Sandox (Add <ALT>+<Graph button> to exit from Graph Exitor directly to Nauvis)