@@ -150,7 +150,7 @@ inputs=[color=0,255,255]inputs[/color]
 outputs=[color=0,255,255]outputs[/color]
 intermediates=[color=0,255,255]Intermediates[/color]
 product_qty=Quantity:
-product_button_tooltip=__1__ [font=heading-2][color=#42ff4b]__2__[/color][/font]__3____4__\n__CONTROL_LEFT_CLICK__ input produced quantity (>0) or consumed quantity (<0)\n__CONTROL_KEY_CTRL__ __CONTROL_LEFT_CLICK__ Add/Remove default constraint on intermediate product (produced=consumed)\n__CONTROL_RIGHT_CLICK__ open recipe panel __5__
+product_button_tooltip=__1__ [font=heading-2][color=#42ff4b]__2__[/color][/font]__3____4__\n__CONTROL_LEFT_CLICK__ input produced quantity (>0) or consumed quantity (<0)\n__CONTROL_KEY_CTRL__ __CONTROL_LEFT_CLICK__ Add/Remove default constraint on intermediate product (produced=consumed)\n__CONTROL_RIGHT_CLICK__ open recipe panel __5__\n __CONTROL_KEY_SHIFT__ __CONTROL_LEFT_CLICK__ set layer for recipe that is using this product
 product_produced=\n[font=default-bold][color=orange]Produced (__1__)    [/color][/font]
 product_consumed=[font=default-bold][color=cyan]Consumed (__1__)[/color][/font]
 product_all_consumed=[font=default-bold][color=cyan]All consumed[/color][/font]
